...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OPZ-3O-Ut8">
                    <rect key="frame" x="374" y="822" width="30" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="OPZ-3O-Ut8" secondAttribute="height" multiplier="1:1" id="cg5-q7-jvo"/>
                        <constraint firstAttribute="height" constant="30" id="jCO-hJ-VqG"/>
                    </constraints>
                    <state key="normal" image="icLocation"/>
                    <connections>
                        <action selector="onClickMyLocationButton:" destination="-1" eventType="touchUpInside" id="L2A-UT-3KR"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
