...
            delegate: self,
            for: GlobalConstants.airportKey,
            inRegion: mapView.region)
    }
    
    func setupUI() {
        setPageTitle("Airport Locator")
        setRightButtonItem(type: .refresh)
        initMapView()
    }
    
    func initMapView() {
        mapView = MKMapView(frame: containerView.frame)
...
